Allow problem owners to edit posts
